[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
rustyline = "15.0.0"
rustyline-derive = "0.11.0"
thiserror = "1.0.38"                             # error handling
